<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/enableDisableButton"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/std_button_height"
        android:background="@color/releasedButtonColor"
        android:textColor="@color/releasedButtonTextColor"
        android:layout_margin="8dp"
        android:contentDescription="@string/enable_disable_button_text"
        android:tag="A"
        android:text="@string/enable_disable_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <Button
        android:id="@+id/suckOutButton"
        android:layout_width="@dimen/std_button_width"
        android:layout_height="@dimen/std_button_height"
        android:background="@color/releasedButtonColor"
        android:textColor="@color/releasedButtonTextColor"
        android:layout_margin="8dp"
        android:contentDescription="@string/suck_out_button_text"
        android:tag="B"
        android:text="@string/suck_out_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enableDisableButton"
        app:layout_constraintBottom_toTopOf="@id/lightButton" />

    <Button
        android:id="@+id/starterButton"
        android:layout_width="@dimen/std_button_width"
        android:layout_height="@dimen/std_button_height"
        android:layout_margin="8dp"
        android:background="@color/releasedButtonColor"
        android:textColor="@color/releasedButtonTextColor"
        android:contentDescription="@string/starter_button_text"
        android:tag="C"
        android:text="@string/starter_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enableDisableButton"
        app:layout_constraintBottom_toTopOf="@id/beaconButton" />
    <Button
        android:id="@+id/lightButton"
        android:layout_width="@dimen/std_button_width"
        android:layout_height="@dimen/std_button_height"
        android:background="@color/releasedButtonColor"
        android:textColor="@color/releasedButtonTextColor"
        android:layout_margin="8dp"
        android:contentDescription="@string/light_button_text"
        android:tag="D"
        android:text="@string/light_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/suckOutButton"
        app:layout_constraintBottom_toBottomOf="parent" />
    <Button
        android:id="@+id/beaconButton"
        android:layout_width="@dimen/std_button_width"
        android:layout_height="@dimen/std_button_height"
        android:background="@color/releasedButtonColor"
        android:textColor="@color/releasedButtonTextColor"
        android:layout_margin="8dp"
        android:contentDescription="@string/beacon_button_text"
        android:tag="E"
        android:text="@string/beacon_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/starterButton"
        app:layout_constraintBottom_toBottomOf="parent" />


</android.support.constraint.ConstraintLayout>